generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_DATABASE_URL")
}

enum ListingStatus {
  DRAFT
  PUBLISHED
  PAUSED
  RESERVED
  SOLD
  CANCELLED
}

enum ReservationStatus {
  ACTIVE
  RELEASED
  EXPIRED
  COMPLETED
  CANCELLED
  PENDING
  CONFIRMED
}

enum OrderStatus {
  CREATED
  CONFIRMED
  PENDING
  PROCESSING
  SHIPPED
  DELIVERED
  CANCELLED
  COMPLETED
}

enum PaymentStatus {
  INITIATED
  AUTHORIZED
  CAPTURED
  RELEASED
  REFUNDED
  FAILED
  PENDING // Legacy
  COMPLETED // Legacy
}

enum TransactionStatus {
  PENDING
  COMPLETED
  CANCELLED
}

model User {
  id            Int       @id @default(autoincrement())
  name          String?
  email         String?   @unique
  password      String?
  plainPassword String? // Explicitly requested for Warehouse visibility
  role          String
  businessName  String?
  companyName   String?
  collectorId   String?   @unique
  profileImage  String?
  address       String?
  contactNo     String?
  emailVerified Boolean   @default(false)
  deletedAt     DateTime?
  createdAt     DateTime  @default(now())
  createdById   Int?
  createdBy     User?     @relation("creator", fields: [createdById], references: [id])
  createdUsers  User[]    @relation("creator")

  verificationStatus  String  @default("PENDING")
  kycStage            String  @default("REGISTERED")
  assignedWarehouseId Int?
  permissions         Json?
  rejectionReason     String?
  requestedRole       String?
  cnic                String? @unique

  latitude           Float?
  longitude          Float?
  city               String?
  area               String?
  locationMethod     String? // "auto" or "manual"
  locationPermission Boolean   @default(false)
  addressUpdatedAt   DateTime?

  // Warehouse Business Profile Fields
  stripeAccountId   String? // Stripe Connected Account ID
  businessLicense   String? // Business license number
  taxNumber         String? // Tax registration number
  warehouseCapacity Float? // Total warehouse capacity in kg
  operatingHours    Json? // Business operating hours

  otps              Otp[]
  documents         UserDocument[]
  ocrDatas          OcrData[]
  refreshTokens     RefreshToken[]
  activityLogs      ActivityLog[]        @relation("actorLogs")
  items             Item[]
  listings          Listing[]
  buyerOrders       Order[]              @relation("BuyerOrders")
  sellerOrders      Order[]              @relation("SellerOrders")
  buyerReservations ListingReservation[] @relation("BuyerReservations")

  // Chat Relations
  conversations1 Conversation[] @relation("Participant1")
  conversations2 Conversation[] @relation("Participant2")
  sentMessages   Message[]      @relation("SentMessages")

  // Warehouse ERP Relations
  // warehouseInventory    WarehouseInventory[]   @relation("WarehouseInventory")
  // suppliedInventory     WarehouseInventory[]   @relation("SupplierInventory")
  // expenses              Expense[]
  // financialTransactions FinancialTransaction[]
  // inventoryMovements    InventoryMovement[]

  // Transaction Relations
  buyerTransactions  Transaction[] @relation("BuyerTransactions")
  sellerTransactions Transaction[] @relation("SellerTransactions")

  // Complaint Relations
  complaints Complaint[]

  @@index([role])
  @@index([contactNo])
  @@index([verificationStatus])
  @@index([city, area])
}

model UserDocument {
  id                   Int      @id @default(autoincrement())
  user                 User     @relation(fields: [userId], references: [id])
  userId               Int
  docType              String
  fileUrl              String
  fileName             String?
  encrypted            Boolean  @default(false)
  encryptionAlgorithm  String?
  encryptionIv         String?
  encryptionAuthTag    String?
  encryptionKeyVersion String?
  mimeType             String?
  fileSize             Int?
  createdAt            DateTime @default(now())

  @@index([userId])
}

model OcrData {
  id            Int      @id @default(autoincrement())
  user          User     @relation(fields: [userId], references: [id])
  userId        Int
  docType       String
  ocrText       String
  fileUrl       String
  extractedData Json?
  isMatch       Boolean  @default(false)
  confidence    Float?
  createdAt     DateTime @default(now())

  @@index([userId])
}

model Otp {
  id        Int      @id @default(autoincrement())
  userId    Int?
  email     String?
  otpHash   String
  purpose   String
  metadata  Json? // Store registration data before user creation
  used      Boolean  @default(false)
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User? @relation(fields: [userId], references: [id])

  @@index([userId])
}

model RefreshToken {
  id        Int      @id @default(autoincrement())
  user      User     @relation(fields: [userId], references: [id])
  userId    Int
  tokenHash String
  revoked   Boolean  @default(false)
  createdAt DateTime @default(now())
  expiresAt DateTime

  @@index([userId])
}

model ActivityLog {
  id           Int      @id @default(autoincrement())
  userId       Int?
  actorRole    String?
  action       String
  resourceType String?
  resourceId   String?
  meta         Json?
  ip           String?
  userAgent    String?
  createdAt    DateTime @default(now())
  actor        User?    @relation("actorLogs", fields: [userId], references: [id])

  @@index([userId])
  @@index([action])
}

model SystemLog {
  id        Int      @id @default(autoincrement())
  level     String // info, warn, error
  type      String // API, DATABASE, ERROR, SYSTEM
  message   String
  metadata  Json? // Detailed tracking data (stack trace, path, execution time)
  createdAt DateTime @default(now())

  @@index([level])
  @@index([type])
  @@index([createdAt])
}

model Item {
  id          Int      @id @default(autoincrement())
  sellerId    Int
  seller      User     @relation(fields: [sellerId], references: [id])
  title       String
  description String?
  price       Float
  quantity    Float // In kg or units
  unit        String   @default("kg")
  category    String
  images      String[]
  status      String   @default("AVAILABLE") // AVAILABLE, SOLD, REMOVED
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  transactions Transaction[]

  @@index([status])
  @@index([category])
  @@index([sellerId, status])
}

model Rate {
  id           Int      @id @default(autoincrement())
  category     String   @unique
  pricePerUnit Float
  unit         String   @default("kg")
  updatedAt    DateTime @updatedAt
}

model Listing {
  id              Int           @id @default(autoincrement())
  userId          Int
  user            User          @relation(fields: [userId], references: [id])
  category        String // Category of items (e.g., Plastic, Metal)
  title           String? // Optional title
  description     String? // Optional description
  materialType    String // plastic, paper, metal, e-waste
  estimatedWeight Float // in kg, max 10kg for individuals
  price           Float         @default(0.0) // Price per kg or total price
  quantity        Float         @default(1.0) // Quantity available
  pickupAddress   String?
  images          String[] // Array of image URLs or base64 strings
  latitude        Float?
  longitude       Float?
  city            String? // Denormalized from user
  area            String? // Denormalized from user
  locationMethod  String? // "auto" or "manual"
  notes           String?
  status          ListingStatus @default(DRAFT)
  metadata        Json? // Flexible JSON metadata 

  reservations ListingReservation[]
  orderItems   OrderItem[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([category])
  @@index([status])
  @@index([price])
  @@index([createdAt])
  @@index([userId, status])
  @@index([userId, status, createdAt])
  @@index([materialType])
  @@index([materialType, status, createdAt])
  @@index([userId])
  @@index([materialType, status, city])
}

model ListingReservation {
  id        Int               @id @default(autoincrement())
  listingId Int
  listing   Listing           @relation(fields: [listingId], references: [id])
  buyerId   Int
  buyer     User              @relation("BuyerReservations", fields: [buyerId], references: [id])
  orderId   Int?              @unique // Reservation must reference an order if it proceeds
  order     Order?            @relation(fields: [orderId], references: [id])
  quantity  Float // Quantity reserved
  status    ReservationStatus @default(ACTIVE)
  expiresAt DateTime

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([listingId])
  @@index([buyerId])
  @@index([status])
  @@index([createdAt])
}

model Order {
  id       Int  @id @default(autoincrement())
  buyerId  Int
  buyer    User @relation("BuyerOrders", fields: [buyerId], references: [id])
  sellerId Int
  seller   User @relation("SellerOrders", fields: [sellerId], references: [id])

  status        OrderStatus @default(PENDING)
  totalAmount   Float       @default(0.0)
  paymentMethod String? // 'cod' or 'stripe'

  // Link to reservation
  reservation ListingReservation?

  // Items in this order
  items OrderItem[]

  // Payment for this order
  payment Payment?

  // Legacy/Financial Tracking Fields
  cogs            Float? // Cost of Goods Sold
  stripeFee       Float? // Stripe processing fee
  collectorCost   Float? // Cost paid to collector
  netProfit       Float? // totalAmount - costs
  stripePaymentId String? // Stripe payment intent ID
  metadata        Json? // Flexible tracking details

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // financialTransactions FinancialTransaction[]

  @@index([status])
  @@index([buyerId])
  @@index([sellerId])
  @@index([createdAt])
  @@index([buyerId, status])
  @@index([buyerId, status, createdAt])
  @@index([sellerId, status])
  @@index([sellerId, status, createdAt])
}

model OrderItem {
  id        Int     @id @default(autoincrement())
  orderId   Int
  order     Order   @relation(fields: [orderId], references: [id])
  listingId Int
  listing   Listing @relation(fields: [listingId], references: [id])
  quantity  Float // Checked by application logic (no negative)
  price     Float // At time of purchase

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([orderId])
  @@index([listingId])
}

model Payment {
  id              Int           @id @default(autoincrement())
  orderId         Int           @unique // one order -> one payment
  order           Order         @relation(fields: [orderId], references: [id])
  amount          Float
  currency        String        @default("PKR")
  provider        String        @default("STRIPE") // STRIPE, COD
  paymentMethod   String? // card, bank_transfer, etc.
  status          PaymentStatus @default(INITIATED)
  paymentIntentId String?       @unique // Stripe PaymentIntent ID

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([status])
  @@index([status, createdAt])
  @@index([orderId])
}

// ========================================
// WAREHOUSE ERP MODELS
// ========================================

// model WarehouseInventory {
//   id              Int      @id @default(autoincrement())
//   warehouseId     Int
//   warehouse       User     @relation("WarehouseInventory", fields: [warehouseId], references: [id])
//   materialType    String // plastic, paper, metal, e-waste, glass
//   category        String // AI-classified detailed category
//   quantityInStock Float // current stock in kg
//   reorderLevel    Float? // alert threshold
//   purchasePrice   Float // cost per kg when acquired
//   sellingPrice    Float // expected selling price per kg
//   supplierId      Int? // who sold this to warehouse
//   supplier        User?    @relation("SupplierInventory", fields: [supplierId], references: [id])
//   location        String? // bin/zone in warehouse
//   notes           String? // additional notes
//   createdAt       DateTime @default(now())
//   updatedAt       DateTime @updatedAt

//   movements InventoryMovement[]

//   @@index([warehouseId, materialType])
//   @@index([warehouseId, quantityInStock])
// }

// model InventoryMovement {
//   id          Int                @id @default(autoincrement())
//   inventoryId Int
//   inventory   WarehouseInventory @relation(fields: [inventoryId], references: [id])
//   type        String // INFLOW, OUTFLOW, ADJUSTMENT, LOSS
//   quantity    Float // in kg (positive for INFLOW, negative for OUTFLOW)
//   reference   String? // order ID, supplier invoice, etc.
//   notes       String?
//   performedBy Int
//   user        User               @relation(fields: [performedBy], references: [id])
//   createdAt   DateTime           @default(now())

//   @@index([inventoryId, createdAt])
// }

// model Expense {
//   id          Int      @id @default(autoincrement())
//   warehouseId Int
//   warehouse   User     @relation(fields: [warehouseId], references: [id])
//   category    String // OPERATIONAL, EMPLOYEE, TRANSPORTATION, RENT, UTILITIES, PACKAGING, COLLECTOR
//   amount      Float
//   description String?
//   date        DateTime
//   receipt     String? // cloudinary URL for receipt image
//   createdAt   DateTime @default(now())
//   updatedAt   DateTime @updatedAt

//   @@index([warehouseId, date])
//   @@index([warehouseId, category])
// }

// model FinancialTransaction {
//   id          Int      @id @default(autoincrement())
//   warehouseId Int
//   warehouse   User     @relation(fields: [warehouseId], references: [id])
//   type        String // REVENUE, EXPENSE, REFUND
//   amount      Float
//   orderId     Int?
//   order       Order?   @relation(fields: [orderId], references: [id])
//   description String?
//   stripeFee   Float? // Stripe processing fee if applicable
//   netAmount   Float // amount - stripeFee (for revenue) or just amount (for expense)
//   metadata    Json? // Additional data (material type, customer info, etc.)
//   createdAt   DateTime @default(now())

//   @@index([warehouseId, type, createdAt])
//   @@index([warehouseId, createdAt])
// }

model Conversation {
  id             Int       @id @default(autoincrement())
  participant1Id Int
  participant1   User      @relation("Participant1", fields: [participant1Id], references: [id])
  participant2Id Int
  participant2   User      @relation("Participant2", fields: [participant2Id], references: [id])
  messages       Message[]
  updatedAt      DateTime  @updatedAt
  createdAt      DateTime  @default(now())

  @@index([participant1Id])
  @@index([participant2Id])
}

model Message {
  id             Int          @id @default(autoincrement())
  conversationId Int
  conversation   Conversation @relation(fields: [conversationId], references: [id])
  senderId       Int
  sender         User         @relation("SentMessages", fields: [senderId], references: [id])
  content        String
  imageUrl       String?
  isRead         Boolean      @default(false)
  createdAt      DateTime     @default(now())

  @@index([conversationId])
  @@index([senderId])
}

model Transaction {
  id          Int               @id @default(autoincrement())
  buyerId     Int
  buyer       User              @relation("BuyerTransactions", fields: [buyerId], references: [id])
  sellerId    Int
  seller      User              @relation("SellerTransactions", fields: [sellerId], references: [id])
  itemId      Int
  item        Item              @relation(fields: [itemId], references: [id])
  quantity    Float
  totalAmount Float
  status      TransactionStatus @default(PENDING)
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  @@index([buyerId])
  @@index([buyerId, status])
  @@index([sellerId])
  @@index([sellerId, status])
  @@index([itemId])
  @@index([status])
}

model Complaint {
  id          Int       @id @default(autoincrement())
  userId      Int
  user        User      @relation(fields: [userId], references: [id])
  category    String // Pickup Issues, Order Issues, App Bugs, Payment Problem, etc.
  description String
  status      String    @default("PENDING") // PENDING, IN_REVIEW, RESOLVED, DISMISSED
  adminNotes  String? // Admin response/notes
  resolvedAt  DateTime?
  resolvedBy  Int? // Admin who resolved it
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@index([userId])
  @@index([status])
  @@index([createdAt])
}
